<resources>
    <string name="app_name">YummyFood</string>

    //login and register
    <string name="content_description">image</string>
    <string name="title_login">АВТОРИЗАЦИЯ</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Пароль</string>
    <string name="lbl_forgot_password">Забыли пароль?</string>
    <string name="btn_lbl_login">Войти</string>
    <string name="don_t_have_an_account">Нету аккаунта?</string>
    <string name="register"><u>Регистрация</u></string>

    <string name="create_an_account">Создание Аккаунта</string>

    <string name="hint_last_name">Фамилия</string>
    <string name="hint_first_name">Имя</string>
    <string name="et_hint_confirm_password">Потвердите пароль</string>

    <string name="i_agree_to_the_terms_and_condition">Я согласен с <u> Условиями &amp; Правилами </u></string>
    <string name="btn_lbl_register">Регистрация</string>
    <string name="already_have_an_account">У вас уже есть аккаунт?</string>
    <string name="login"><u>Войти</u></string>

    <string name="register_success">Регистарция прошла успешно!</string>

    //error при авторизации
    <string name="err_msg_enter_first_name">Пожалуйста, введите имя!</string>
    <string name="err_msg_enter_last_name">Пожалуйста, введите Фамилию!</string>
    <string name="err_msg_enter_email">Пожалуйста, введите почту!</string>
    <string name="err_msg_enter_password">Пожалуйста, введите пароль!</string>
    <string name="err_msg_enter_confirm_password">Пожалуйста, подтвердите свой пароль!</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Пароли не совпадают!</string>
    <string name="err_msg_agree_terms_and_condition">Вы не согласились с правилами YummyFood!</string>

    //progress dialog загрузка
    <string name="please_wait">Подождите&#8230;</string>

    //Забыли пароль
    <string name="title_forgot_password">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="forgot_password_title_description">Пожалуйста , введите свой email для того чтоб мы отправили вам ссылку для восстановления пароль. Спасибо что с YummyFood!</string>
    <string name="btn_lbl_submit">Восстановить</string>
    <string name="email_sent_success">\"На вашу почту отпарвлена ссылка для восстановления пароля!\"</string>

    //Профайл юзер
    <string name="title_complete_profile">ПОДТВЕРЖДЕНИЕ ПРОФИЛЯ</string>
    <string name="title_edit_profile">Настроить профиль</string>
    <string name="et_hint_mobile_number">Телефон</string>
    <string name="rb_lbl_male">М</string>
    <string name="rb_lbl_female">Ж</string>
    <string name="btn_lbl_save">Сохранить</string>

    //Если разрешение на доступ к хранилищию нету выводит ошибку
    <string name="read_storage_permission_denied">Упс.. , вы только что отказали в разрешении к достопу в хранилище. Но вы также можете разрешить его в настройках вашего телефона .</string>
    //ошибка когда не удалость выбрать изображение с телефона для профиля
    <string name="image_selection_failed">Выбор изображения не удался!</string>
    //ошибка при вводе неправильного номера
    <string name="err_msg_enter_mobile_number">Пожалуйста , введите номер телефона!.</string>
    //сообщение об успешном обновлении данных в профиле
    <string name="msg_profile_update_success">Ваши данные успешно обновлены!</string>


    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_my_products">Мои рецепты</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Заказы</string>
    <string name="title_recipe">Рецепты</string>

    <string name="please_click_back_again_to_exit">Пожалуйста, нажмите еще раз чтобы выйти.</string>
    //settins
    <string name="action_settings">Настройки</string>
    <string name="title_settings">Настройки</string>
    <string name="lbl_edit">Изменить</string>
    <string name="lbl_addresses">Адрес</string>
    <string name="btn_lbl_logout">Выйти</string>

    //добавление моего рецепта
    <string name="action_add_myproduct">Добавить мои рецепты</string>
    <string name="title_add_product">ДОБАВИТЬ РЕЦЕПТ</string>
    <string name="et_hint_product_title">Название рецепта</string>
    <string name="et_hint_product_price">Цена продуктов (TNG)</string>
    <string name="et_hint_product_description">Описание рецептa</string>
    <string name="et_hint_product_ingredients">Ингредиенты</string>
    <string name="btn_my_product_submit">Опубликовать</string>

    //Проверка целостности моего рецепта при добавлении
    <string name="err_msg_select_product_image">Пожалуйста, добавьте фото.</string>
    <string name="err_msg_enter_product_title">Пожалуйста, напишите названии рецепта которого хотите добавить.</string>
    <string name="err_msg_enter_product_price">Пожалуйста, напишите примерную цену продуктов для этого рецепта</string>
    <string name="err_msg_enter_product_description">Пожалуйста, напишите описание (по шагово что надо сделать для приготовления)</string>
    <string name="err_msg_enter_product_ingredients">Пожалуйста, напишите ингредиентся вашего рецепта.</string>

    <string name="product_uploaded_success_message">Ваш рецепт успешно опубликован!</string>
    <string name="no_my_products_added_yet">Вы еще не добавили рецепты! Пожалуйста,поделитесь своими вкусными рецептами!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    //не найдены рецепты
    <string name="no_recipe_item_found">Рецепты не найдены!</string>

    //удаление одного из моих рецептов
    <string name="product_delete_success_message">Ваш рецепт успешно удален.</string>
    <string name="delete_dialog_title">Удалание рецепта</string>
    <string name="delete_dialog_message">Вы уверены что хотите удалить рецепт? Думаю другие не хотели бы чтоб ваш рецепт был удален</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    //не найдены продукты в dashboard
    <string name="no_dashboard_item_found">Не найдены продукты для заказа на дом!</string>

    //Детали рецепта
    <string name="title_recipe_details">Детали рецепта</string>
    <string name="lbl_recipe_description">Описание рецепта:</string>
    <string name="lbl_recipe_ingredients">Ингредиенты рецепта:</string>
    <string name="lbl_recipe_details_author">Автор рецепта:</string>

    //Когда открываешь детали продуктов в dahboard
    <string name="btn_lbl_add_to_cart">Добавить в корзину</string>
    <string name="title_product_details">Детали продукта</string>
    <string name="lbl_product_description">Описание продукта</string>
    <string name="lbl_product_details_stock_quantity">Количество продукта</string>

    //При успешном добавлении продукта в заказы ,в карту
    <string name="success_message_item_added_to_cart">Продукт успешно добавлен в заказы.</string>
    //для перехода в активити добавление в карты
    <string name="btn_lbl_go_to_cart">В корзину</string>
    //мои карты
    <string name="title_my_cart">Корзина</string>
    <string name="no_cart_item_found">Ваша корзина пуста</string>
    <string name="lbl_subtotal">Цена</string>
    <string name="lbl_shipping_charge">Комиссия</string>
    <string name="lbl_total_amount">Общая цена</string>
    <string name="btn_lbl_checkout">Заказать</string>
    <string name="action_cart">Корзина</string>
    <string name="lbl_out_of_stock">Нет в наличии</string>
    <string name="msg_item_removed_successfully">Успешно удалено из корзины.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    //список адресов
    <string name="title_address_list">Мои адресы</string>
    <string name="no_address_found">Нету адресов!</string>
    <string name="lbL_add_address">Добавить адрес</string>
    //добавление и изменение адреса
    <string name="title_add_address">Добавить адрес</string>
    <string name="hint_full_name">Полное имя</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Дополнительная информация</string>
    <string name="hint_other_details">Другие подробности</string>
    <string name="lbl_home">Дом</string>
    <string name="lbl_office">Офис</string>
    <string name="lbl_other">Другое</string>
    <string name="btn_lbl_address_submit">Сохранить</string>

    //проверка целостности полей при вводе адреса
    <string name="err_msg_please_enter_full_name">Пожалуйста, введите полноме имя.</string>
    <string name="err_msg_please_enter_phone_number">Пожалуйста, введите номер телефона.</string>
    <string name="err_msg_please_enter_address">Пожалуйста, введите адрес.</string>
    <string name="err_msg_please_enter_zip_code">Пожалуйста, введите zip-code.</string>
    <string name="err_msg_please_enter_other_details">Пожалуйста, введите дополнителную информацию.</string>
    //Добавление адреса
    <string name="err_your_address_added_successfully">Ваш адрес успешно добавлен.</string>
    //изменение адреса
    <string name="title_edit_address">Изменение адреса</string>
    <string name="btn_lbl_update">Обнавить</string>
    <string name="msg_your_address_updated_successfully">Ваш адрес успешно обнавлен.</string>
    <string name="err_your_address_deleted_successfully">Ваш адрес успешно удален.</string>

    //Для заказов при уже выборе продукта
    <string name="title_select_address">Выбрать адресс</string>
    //чек
    <string name="title_checkout">ЧЕКК</string>
    <string name="checkout_lbl_product_items">Список продуктов</string>
    <string name="checkout_lbl_selected_address">Выбраный адрес</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Способ оплаты</string>
    <string name="lbl_cash_on_delivery">Наличными</string>
    <string name="btn_lbl_place_order">Заказать</string>
    //нету заказов
    <string name="no_orders_placed_yet">У вас еще нету заказов!</string>
    //детали заказа
    <string name="title_my_order_details">Детали моего заказа</string>
    <string name="order_details_lbl">Описание заказа</string>
    <string name="order_details_lbl_order_id">ID заказа</string>
    <string name="order_details_lbl_order_date">Дата заказа</string>
    <string name="order_details_lbl_order_status">Статус заказа</string>
    <string name="order_status_pending">На рассмотрении</string>
    <string name="order_details_lbl_shipping_address">Выбранный адрес </string>

    <string name="order_status_in_process">В процессе</string>
    <string name="order_status_delivered">Доставлен</string>
</resources>