<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RecipeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_recipe_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_product_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_image_height"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"
                android:orientation="vertical"
                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_detail_image">

                <com.sbgdnm.yummyfood.utils.YFTextViewBold
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_title_textSize"
                    tools:text="Названите продукта" />

                <com.sbgdnm.yummyfood.utils.YFTextView
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_price_textSize"
                    tools:text="TNG 100" />
            </LinearLayout>

            <com.sbgdnm.yummyfood.utils.YFTextViewBold
                android:id="@+id/tv_product_details_label_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:text="@string/lbl_recipe_ingredients"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/product_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price" />

            <com.sbgdnm.yummyfood.utils.YFTextView
                android:id="@+id/tv_product_details_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/product_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label_ingredients"
                tools:text="Тут будет ингедиенты продукта." />

            <com.sbgdnm.yummyfood.utils.YFTextViewBold
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:text="@string/lbl_recipe_description"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/product_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_ingredients" />

            <com.sbgdnm.yummyfood.utils.YFTextView
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/product_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                tools:text="Тут будет полное описание продукта." />

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_description">

                <com.sbgdnm.yummyfood.utils.YFTextViewBold
                    android:id="@+id/tv_product_details_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_recipe_details_author"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_label_textSize" />

                <com.sbgdnm.yummyfood.utils.YFTextView
                    android:id="@+id/tv_product_details_available_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:paddingStart="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/product_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    tools:text="Samat Bagdan" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>